@@ -3,3 +3,4 @@ MANIFEST
 Makefile.PL
 WaveBand.pm
 t/waveband.t
+README
